LE COMMIT